<resources>
    <string name="app_name">InventApp</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="password">Contraseña (Mínimo 6 Caracteres)</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="digite_el_nombre">Digite el Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="repetir_password">Repetir Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="resultado">resultado</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="cine">Cine</string>
    <string name="gimnasio">Gimnasio</string>
    <string name="leer">Leer</string>
    <string name="series">Series</string>
    <string name="nombre_lb">Nombre:</string>
    <string name="correo_lb">Correo:</string>
    <string name="telefono_lb">Telefono:</string>
    <string name="contrasena_lb">Contraseña:</string>
    <string name="sexo_lb">Sexo:</string>
    <string name="pasatiempo_lb">Pasatiempos:</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="opciones">Opciones:</string>
    <string name="titulo">REGISTRARME</string>
    <string name="motivo_de_visita">Motivo de visita</string>
    <string name="aventura">Aventura</string>
    <string name="cultural">Cultural</string>
    <string name="religioso">Religioso</string>
    <string name="caminar">Caminar</string>
    <string name="app">TravelToSanto</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="incio">Incio</string>
    <string name="reservacion">Reservación</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">No se cargo el mapa correctamente</string>
    <string name="perfil">Perfil</string>
    <string name="tipo_habitacion">Tipo_Habitacion</string>
    <string name="descripcion_habitaci_n">Descripcion_Habitación</string>
    <string name="precio1">$Precio</string>
    <string name="hotel_plaza_real">Hotel Plaza Real</string>
    <string name="hoteles">Hoteles</string>
    <string name="restaurante">Restaurante</string>
    <string name="cajeros">Cajeros</string>
    <string name="lugares">Lugares</string>
    <string name="tiendas">Tiendas</string>
    <string name="bares">Bares</string>
    <string name="prueba_perfil">Fragmento para perfil, donde se tendrá información básica del usuario, las reservar realizadas y los lugares que ha visitado</string>
    <string name="prueba_inicio">Este fragmento es para el inicio, tendra el mapa en la parte superiror, luego tendrá botones para mostrar mapas con ubicaciones especificas y por ultimo contendrá información, como videos imagenes y sitios recomendados del pueblo</string>
    <string name="pick_date">pick_date</string>
    <string name="formato">MM/dd/yyyy</string>
    <string name="fecha">Fecha de reservación</string>
    <string name="c_dula">Cédula</string>
    <string name="contrase_a">Contraseña</string>
    <string name="reservar">Reservar</string>
    <string name="precio">$Precio</string>
    <string name="inicio_">Inicio</string>
    <string name="reservar_">Reservar</string>
    <string name="lugar_recomendado">Lugar Recomendado</string>
    <string name="error_msg_login">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_msg_email_login">The email address is badly formatted.</string>
    <string name="error_msg_email_used">The email address is already in use by another account.</string>
    <string name="close_sesion">Cerrar Sesion</string>
    <string name="error_msg_login_conection">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
    <string name="error_msg_incorrect_pass">The password is invalid or the user does not have a password.</string>
    <string name="olvide_pass">Olvidaste tu contraseña</string>
    <string name="tus_reservas">RESERVAS PREVIAS</string>
    <string name="ingreso">Ingreso:</string>
    <string name="salida">Salida:</string>
    <string name="noreservas">Aún no ha realizado reservas</string>
</resources>