<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/m_inicio">

    <fragment
        android:id="@+id/m_inicio"
        android:name="com.ricardotangarife.traveltosanto.utils.fragment_bottom_navegation.InicioFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/m_reservation"
        android:name="com.ricardotangarife.traveltosanto.utils.fragment_bottom_navegation.ReservationFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_reservation" />

    <fragment
        android:id="@+id/m_perfil"
        android:name="com.ricardotangarife.traveltosanto.utils.fragment_bottom_navegation.PerfilFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_perfil" />
</navigation>