<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/aliceblue"
    tools:context=".RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_nombre"
                style="@style/margen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:hint="@string/digite_el_nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_correo"
                style="@style/margen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_telefono"
                style="@style/margen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:hint="@string/telefono"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_password"
                style="@style/margen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_reppassword"
                style="@style/margen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:hint="@string/repetir_password"
                android:inputType="textPassword" />
            <!--
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/margen"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/masculino"
                    android:textColor="@color/white"
                    android:id="@+id/rb_masculino"
                    android:checked="true"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/femenino"
                    android:textColor="@color/white"
                    android:id="@+id/rb_femenino"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text= "@string/motivo_de_visita"
                android:textAlignment="center"
                android:layout_marginBottom="6sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />

            <TableLayout
                android:layout_width="match_parent"
                style="@style/margen"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/aventura"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:id="@+id/cb_cine"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/cultural"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:id="@+id/cb_gimnasio"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/religioso"
                        android:textColor="@color/white"
                        android:id="@+id/cb_leer"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/caminar"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:id="@+id/cb_series"/>
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:id="@+id/tv_showPicker"/>
-->
            <Button
                android:id="@+id/bt_resgistrar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="65dp"
                android:background="@drawable/radius_bt"
                android:text="@string/registrar"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_cancelar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="65dp"
                android:background="@drawable/radius_bt"
                android:text="@string/cancelar"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>